fix(masthead): ensure opened L1 mobile dropdown is visible while there is also a ToC (#11734)
none

Given the page uses both an L1 menu and a table of contents (ToC),
and the page is displaying at a mobile breakpoint,
and the ToC menu is the sticky element (i.e. stuck to the top of the viewport),
and the user scrolls up slightly to reveal the L1 dropdown,
and the user open the L1's dropdown menu,
then the dropdown menu gets hidden above the viewport, forcing the user to scroll up more to access it.
Instead, the top of L1 dropdown menu should be visible when opened.

This problem is occurring because the dropdown exists in the document flow, and the StickyHeader utility doesn't reset stuck elements' positions when the menu is opened.

The easiest solution I found was to position the dropdown menu absolutely like most other dropdown menus you might encounter. This bypasses the tricky problem of trying to get the StickyHeader to recalculate, and in my opinion is a slight enhancement in both performance (avoids layout shifts and associated repaint costs) and overall UX (gives dropdown a more expected behavior).

**Changed**

- Prevents mobile L1 dropdown menu from becoming hidden above viewport when opened while there is currently a sticky table of contents menu.
- Prevents L1 from scrolling away when a submenu is open on desktop or the dropdown is open on mobile.
- Consolidates StickyHeader utility tracked data to make debugging easier.
- Refactors StickyHeader logic to support all potentially sticky elements being on page at the same time.

To test the main fix:
1. Visit [the Dotcom Shell > With L1 story](https://ibmdotcom-webcomponents.s3.us-east.cloud-object-storage.appdomain.cloud/deploy-previews/11734/index.html?path=/story/components-dotcom-shell--with-l-1) in the deploy preview.
2. Change the preview size to "Large mobile" or "Small mobile"
3. Scroll down the page until the ToC is stuck to the top of the viewport.
4. Scroll back up just enough to see the L1.
5.

--- a/packages/styles/scss/components/masthead/_masthead-l1.scss
+++ b/packages/styles/scss/components/masthead/_masthead-l1.scss
@@ -141,8 +141,26 @@ $search-transition-timing: 95ms;
     }
 
     .#{$prefix}--masthead__l1-dropdown {
+      border-bottom: 1px solid $layer-03;
+      position: absolute;
+      inset-block-start: 100%;
+      inset-inline: 0;
+      background-color: $background;
+      color: $text-secondary;
+
+      &.is-open {
+        box-shadow: 0 0 6px #c6c6c6;
+      }
+
       &:not(.is-open) {
         display: none;
+      }
+
+      &:last-child {
+        > a,
+        > button {
+          border-bottom: initial;
+        }
       }
 
       // Height of viewport, minus the L0/L1 combo, minus additional space to match L0 megapanels
@@ -343,7 +361,9 @@ $search-transition-timing: 95ms;
         @include type-style(body-short-01);
 
         background-color: $background-brand;
+        // background-color: $interactive-01;
         color: $layer-02;
+        border-bottom: initial;
 
         svg {
           color: inherit;
